--- a/online-compiler/src/main/resources/application.properties
+++ b/online-compiler/src/main/resources/application.properties
@@ -14,5 +14,5 @@ spring.jpa.show-sql=false
 spring.h2.console.enabled=true
 
 ##Spring Security Credentials
-spring.security.user.name=bruno
-spring.security.user.password=miletic
+spring.security.user.name=admin
+spring.security.user.password=admin
